fix scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -125,3 +125,29 @@
 .mobile-zindex{
   z-index: 100;
 }
+
+body{
+  scroll-behavior: smooth;
+
+}
+
+/* Make all scrollbars small */
+* {
+  scrollbar-width: thin; /* Firefox */
+  scrollbar-color: #c1c1c1 #f1f1f1; /* Firefox: thumb + track */
+}
+
+/* Chrome, Edge, Safari */
+*::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background: #b5b5b5;
+  border-radius: 10px;
+}
+
+*::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
